# Athena_Sentinel_Core

./: README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_users_table.py  002_add_updated_at_to_threats.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  ai.py  alerts.py  analytics.py  auth.py  dashboard.py  live_feed.py  threats.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: threat.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: scraper.py  threat_service.py
backend/scripts/: backfill_types.py  create_tables.py  seed_threats.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatAssistant.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Analytics.jsx  AnalyticsChart.jsx  Dashboard.jsx  LiveFeed.jsx  Login.jsx  Profile.jsx  Register.jsx  Threats.jsx
